fixed the issue of SDE heading on small devices

--- a/src/components/UI/Text/style.css
+++ b/src/components/UI/Text/style.css
@@ -1,4 +1,3 @@
 #text {
     color: #aaaaaa;
-    font-size: 0.95rem;
 }
