--- a/src/components/intro/style.css
+++ b/src/components/intro/style.css
@@ -100,13 +100,12 @@
 
 #logo {
     width: 100%;
-    height: 3rem;
+    height: 2.5rem;
     margin: 0px 5px;
     overflow: visible;
 }
 
 #logo text {
-    transform: translate(0px, 75%);
     fill: transparent;
     stroke: white;
     font-size: 2.5rem;
@@ -139,6 +138,13 @@
     #logo text {
         font-size: 1.5rem;
     }
+    #logo {
+        height: 1.5rem;
+    }
+    #logo {
+        padding-top: 5px !important;
+        padding-bottom: 15px !important;
+    }
 }
 @media screen and (min-width: 601px) and (max-width: 1200px) {
     .introRight p {
@@ -147,8 +153,15 @@
     #logo text {
         font-size: 3rem;
     }
+    #logo {
+        height: 3rem;
+    }
     button {
         font-size: 0.9rem !important;
+    }
+    #logo {
+        padding-top: 5px !important;
+        padding-bottom: 15px !important;
     }
 }
 @media screen and (min-width: 1201px) {
@@ -158,10 +171,14 @@
     #logo text {
         font-size: 4rem;
     }
+    #logo {
+        height: 4rem;
+    }
     button {
         font-size: 1rem !important;
     }
     #logo {
-        margin-top: 20px !important;
+        padding-top: 10px !important;
+        padding-bottom: 30px !important;
     }
 }
